@@ -4,12 +4,13 @@ import jakarta.enterprise.context.ApplicationScoped;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 @ApplicationScoped
 public class DocumentDownloader {
 
-    public InputStream downloadDocument(String documentUrlString) throws IOException {
-        return new URL(documentUrlString).openStream();
+    public InputStream downloadDocument(String documentUriString) throws IOException, URISyntaxException {
+        return new URI(documentUriString).toURL().openStream();
     }
 }
